--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mccorporation.mcjores.askmollyproject">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+
     <application
         android:allowBackup="true"
+        android:name=".Application"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -26,6 +33,14 @@
         <activity android:name=".ProfileFragment"
             android:theme="@style/AppTheme.NoActionBar"/>
 
+        <activity android:name=".SignInActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="351879808832619"
+            />
     </application>
 
 </manifest>
