--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,10 +12,19 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
+
+
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        debug{
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
     }
 }
 
@@ -28,12 +37,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
+//    implementation project(path:':socialNetworkModuleName',configuration: 'default');
 
     implementation 'com.vk:androidsdk:1.6.9'
 
-    implementation 'com.github.asne:asne-facebook:0.3.3'
-    implementation 'com.github.asne:asne-vk:0.3.3'
-    implementation 'com.github.asne:asne-googleplus:0.3.3'
+    implementation'com.makeramen:roundedimageview:2.3.0'
+//    implementation 'com.github.asne:asne-facebook:0.3.3'
+//    implementation 'com.github.asne:asne-vk:0.3.3'
+//    implementation 'com.github.asne:asne-googleplus:0.3.3'
 
 }
