--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+
+
     package="com.mccorporation.mcjores.askmollyproject">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -9,6 +12,7 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <application
+
         android:allowBackup="true"
         android:name=".Application"
         android:icon="@mipmap/ic_launcher"
